ST: SDF textarea style fix to avoid jumping upon autoresize on input

--- a/packages/SequenceTranslator/css/sdf-tab.css
+++ b/packages/SequenceTranslator/css/sdf-tab.css
@@ -26,6 +26,7 @@
 .sdf-text-input-td textarea {
   width: 100%;
   resize: none;
+  height: 22px; /* Fine tuned value to avoid "jumping" of the textarea upon autoresize */
 }
 
 .sdf-mol-img {
